{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 21,
  "lineage": "cba93335-78d0-b6cc-820b-4753e2ff0b11",
  "resources": [
    {
      "module": "module.my_compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-079db87dc4c10ac91",
            "arn": "arn:aws:ec2:us-east-1:918792379489:instance/i-05c6449e7be7cca68",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c6449e7be7cca68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07da34d3fa3f273d0"
              }
            ],
            "primary_network_interface_id": "eni-07da34d3fa3f273d0",
            "private_dns": "ip-10-0-1-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_ip": "54.224.198.136",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01672fb289bb5151c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0271ebba6b1547661",
            "tags": {
              "Name": "public-api-gateway"
            },
            "tags_all": {
              "Name": "public-api-gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052028b059a2fc53d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "i-05c6449e7be7cca68",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_security_group.public_sg",
            "module.my_network.aws_subnet.public_subnet",
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "python_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-079db87dc4c10ac91",
            "arn": "arn:aws:ec2:us-east-1:918792379489:instance/i-099f3cac93ac9778d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099f3cac93ac9778d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0252628dd70cb7fcd"
              }
            ],
            "primary_network_interface_id": "eni-0252628dd70cb7fcd",
            "private_dns": "ip-10-0-2-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.51",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0149f85d5d927b75a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0916e6bb3794c5f99",
            "tags": {
              "Name": "private-python-worker"
            },
            "tags_all": {
              "Name": "private-python-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033e66d7b12a7c875"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "i-099f3cac93ac9778d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_security_group.private_sg",
            "module.my_network.aws_subnet.private_subnet",
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ts_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-079db87dc4c10ac91",
            "arn": "arn:aws:ec2:us-east-1:918792379489:instance/i-0e8807d9ed58a59ec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8807d9ed58a59ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04e3153652454b8a4"
              }
            ],
            "primary_network_interface_id": "eni-04e3153652454b8a4",
            "private_dns": "ip-10-0-2-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.14",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f0b5fed133927b2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0916e6bb3794c5f99",
            "tags": {
              "Name": "private-ts-worker"
            },
            "tags_all": {
              "Name": "private-ts-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033e66d7b12a7c875"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "i-0e8807d9ed58a59ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_security_group.private_sg",
            "module.my_network.aws_subnet.private_subnet",
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:internet-gateway/igw-0ebeae6743d1cc3af",
            "id": "igw-0ebeae6743d1cc3af",
            "owner_id": "918792379489",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-assignment-igw"
            },
            "tags_all": {
              "Name": "devops-assignment-igw"
            },
            "vpc_id": "vpc-03e666811220f3320"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "igw-0ebeae6743d1cc3af",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:route-table/rtb-07d91da0689b6a092",
            "id": "rtb-07d91da0689b6a092",
            "owner_id": "918792379489",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebeae6743d1cc3af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e666811220f3320"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "rtb-07d91da0689b6a092",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_internet_gateway.igw",
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c224986867de2765",
            "region": "us-east-1",
            "route_table_id": "rtb-07d91da0689b6a092",
            "subnet_id": "subnet-0271ebba6b1547661"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "rtbassoc-0c224986867de2765",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_internet_gateway.igw",
            "module.my_network.aws_route_table.public_route",
            "module.my_network.aws_subnet.public_subnet",
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:security-group/sg-033e66d7b12a7c875",
            "description": "Allow internal traffic only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033e66d7b12a7c875",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-worker-sg",
            "name_prefix": "",
            "owner_id": "918792379489",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e666811220f3320"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "sg-033e66d7b12a7c875",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:security-group/sg-052028b059a2fc53d",
            "description": "Allow web traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052028b059a2fc53d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3111
              }
            ],
            "name": "public-api-sg",
            "name_prefix": "",
            "owner_id": "918792379489",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e666811220f3320"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "sg-052028b059a2fc53d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:subnet/subnet-0916e6bb3794c5f99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0916e6bb3794c5f99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918792379489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-worker-subnet"
            },
            "tags_all": {
              "Name": "private-worker-subnet"
            },
            "vpc_id": "vpc-03e666811220f3320"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "subnet-0916e6bb3794c5f99",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:subnet/subnet-0271ebba6b1547661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0271ebba6b1547661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918792379489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-api-subnet"
            },
            "tags_all": {
              "Name": "public-api-subnet"
            },
            "vpc_id": "vpc-03e666811220f3320"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "subnet-0271ebba6b1547661",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918792379489:vpc/vpc-03e666811220f3320",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a4bc9ce6467bab7",
            "default_route_table_id": "rtb-066a2ed16fc76cf54",
            "default_security_group_id": "sg-02659081162038c3b",
            "dhcp_options_id": "dopt-070f0680999d1c775",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e666811220f3320",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066a2ed16fc76cf54",
            "owner_id": "918792379489",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-assignment-vpc"
            },
            "tags_all": {
              "Name": "devops-assignment-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "918792379489",
            "id": "vpc-03e666811220f3320",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}